2007-07-18  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.

        - fixed <rdar://problem/5340603> REGRESSION: javascript being written to the screen in Safari

        Test Case: fast/tokenizer/badscript.html
        
        * html/HTMLTokenizer.cpp:
        (WebCore::HTMLTokenizer::parseTag): Don't apply our self-closing
        <script> quirk in cases where the / appears in a mangled attribtue
        value.

2007-07-17  Peter Kasting  <zerodpx@gmail.com>

        Reviewed by Hyatt.

        http://bugs.webkit.org/show_bug.cgi?id=13618
        Don't set link targets to "_blank" on middle-click; rely on the policy
        delegate to do the right thing.

        * html/HTMLAnchorElement.cpp:
        (WebCore::HTMLAnchorElement::defaultEventHandler):

2007-07-17  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej.

        Fix for <rdar://problem/4799967> Safari and other WebKit 
        apps sometimes crash in WebCore::FontData::platformInit

        Always retain/release our font handle, instead of only retaining
        in the presence of GC.

        * platform/mac/FontPlatformData.h:
        (WebCore::FontPlatformData::FontPlatformData):
        (WebCore::FontPlatformData::~FontPlatformData):

2007-07-17  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoff Garen.

        Fix for <rdar://problem/5333957>
                http://bugs.webkit.org/show_bug.cgi?id=14610

        Original patch by Feng Qian.

        - Clear the selection object when disconnecting a frame.

        Test: http/tests/security/cross-frame-access-selection.html

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::clear):
        * page/DOMWindow.cpp:
        (WebCore::DOMWindow::disconnectFrame):
        (WebCore::DOMWindow::clear):
        * page/DOMWindow.h:
        * page/Frame.cpp:
        (WebCore::Frame::clearScriptProxy):
        (WebCore::Frame::clearDOMWindow):
        * page/Frame.h:

2007-07-17  Oliver Hunt  <oliver@apple.com>
