@@ -1,3 +1,13 @@
+2007-07-20  Mark Rowe  <mrowe@apple.com>
+
+        Reviewed by Maciej.
+
+        Move FTPDirectoryTokenizer::m_templateDocumentData to be a function-scoped static
+        to avoid creating a global initializer.  This fixes the build for x86_64.
+
+        * loader/FTPDirectoryDocument.cpp:
+        (WebCore::FTPDirectoryTokenizer::loadDocumentTemplate):
+
 2007-07-18  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Oliver.
